fix(buttons): Make vertical alignment consistent for buttons (#4949)

--- a/ui/components/buttons/mixins/_index.scss
+++ b/ui/components/buttons/mixins/_index.scss
@@ -13,7 +13,6 @@
     padding-right: var(--slds-c-button-#{$api-variant}-spacing-inline-end, var(--sds-c-button-#{$api-variant}-spacing-inline-end, $spacing-medium));
   }
   text-align: center;
-  vertical-align: middle;
   justify-content: center;
   transition: border 0.15s linear;
 }
